--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     font-family: Merriweather;
     font-size: 7rem;
     text-align: center;
+    
 }
 
 .nav-wrapper a {
@@ -25,7 +26,7 @@ body {
 .left-header {
     font-family: Merriweather;
     border-bottom: black solid .5px;
-    height: 373px;
+    height: 450.5px;
 }
 
 .right-header img {
@@ -39,4 +40,39 @@ body {
    
 }
 
+/* card styles */
 
+
+.card-one {
+    border-top: var(--primary-color) 4px solid;
+}
+
+.card-two{
+    border-top: red 4px solid;
+}
+
+.card-three {
+    border-top: green 4px solid;
+}
+
+.card-four {
+    border-top: yellow 4px solid;
+}
+
+.card-five {
+    border-top: purple 4px solid;
+}
+
+
+
+
+
+
+
+
+
+
+
+.shop-header {
+    margin-bottom: 150px;
+}
