--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,11 @@ body {
 
 .left-header {
     font-family: Merriweather;
-    border-bottom: black solid .5px;
-    height: 450.5px;
+    
+}
+
+.left-header p {
+    max-width: 300px;
 }
 
 .right-header img {
@@ -35,7 +38,8 @@ body {
 }
 
 .right-header {
-    grid-column: 2 / 4;
+    grid-column: 2 / 5;
+    grid: 1 / -4;
     
    
 }
@@ -48,31 +52,37 @@ body {
 }
 
 .card-two{
-    border-top: red 4px solid;
+    border-top: var(--primary-color) 4px solid;
 }
 
 .card-three {
-    border-top: green 4px solid;
+    border-top: var(--primary-color) 4px solid;
 }
 
 .card-four {
-    border-top: yellow 4px solid;
+    border-top: var(--primary-color) 4px solid;
 }
 
 .card-five {
-    border-top: purple 4px solid;
+    border-top: var(--primary-color) 4px solid;
 }
 
+.card-six {
+    border-top: var(--primary-color) 4px solid;
+    
+}
 
-
-
-
-
-
-
-
+.card-six img {
+    height: 100%;
+    width: 100%;
+}
 
 
 .shop-header {
     margin-bottom: 150px;
+}
+
+.card-image img {
+    height: 300px;
+    width: 300px;
 }
