--- a/css/utilities.css
+++ b/css/utilities.css
@@ -17,7 +17,7 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    /* grid-template-rows: repeat(2, 1fr); */
     gap: 20px;
     justify-content: center;
     align-items: center;
